# opencellid-downloader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/opencellid_downloader/: __init__.py  cli.py  client.py  countries.py  downloader.py  exceptions.py  utils.py
tests/: test_cli.py  test_client.py  test_countries.py  test_downloader.py  test_import.py  test_utils.py
