[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencellid-downloader"
version = "0.1.1"
description = "A Python library and CLI tool for downloading OpenCellID data by MCC code or country name."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Isaac Gois" }
]
keywords = [
    "opencellid",
    "cell towers",
    "geolocation",
    "mcc",
    "downloader",
    "cli"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

[project.scripts]
opencellid-download = "opencellid_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]